# OpenCL-Benchmark

./: benchmark.c  hello_world_cl.c
snippet/: CMakeLists.txt  build_opencl_program
snippet/cmake/: FindOpenCL.cmake  FindSSE.cmake
snippet/src/: CMakeLists.txt
snippet/src/Ch1/build_opencl_program/: CMakeLists.txt  a.out  build_opencl_program  build_opencl_program.c  simple.cl
snippet/src/Ch1/device_details/: CMakeLists.txt  device_details.c
snippet/src/Ch1/device_extensions/: CMakeLists.txt
snippet/src/Ch1/kernel_query/: CMakeLists.txt  Makefile.org  kernel_query.c  simple_2.cl
snippet/src/Ch1/kernel_queue/: CMakeLists.txt  hello_world.cl  kernel_queue  kernel_queue.c
snippet/src/Ch1/platform_details/: CMakeLists.txt  Makefile.org  platform_details  platform_details.c
snippet/src/Ch10/RadixSort_GPU/: CMakeLists.txt  RadixSort.c  RadixSort.cl  radixsort_config.h  radixsort_config.h.in
snippet/src/Ch10/Reduction/: .reduction.c.swp  CMakeLists.txt  reduction.c  reduction.cl  reduction_serial.cpp
snippet/src/Ch2/buffer_query/: CMakeLists.txt  buffer_query.c
snippet/src/Ch2/copy_buffer/: CMakeLists.txt  Makefile.org  copy_buffer.c
snippet/src/Ch2/events/: CMakeLists.txt  events.c  sample_kernel.cl
snippet/src/Ch2/simple_2D_readwrite/: CMakeLists.txt  Makefile.org  simple_2D_readwrite.c
snippet/src/Ch2/sub_buffer_query/: CMakeLists.txt  Makefile.org  subbuffer_query.c
snippet/src/Ch2/sub_buffers/: CMakeLists.txt  Makefile.org  readme.txt  sub_buffer.c  sub_buffer.cl
snippet/src/Ch2/user_buffer/: CMakeLists.txt  Makefile.org  user_buffer.c  user_buffer.h
snippet/src/Ch2/user_buffer_alignment/: CMakeLists.txt  Makefile.org  readme.txt  user_buffer.h  user_buffer_align.c  user_test.cl
snippet/src/Ch2/work_partitioning/: CMakeLists.txt  Makefile.org  work_partition.c  work_partition.cl
snippet/src/Ch3/byte_ordering/: CMakeLists.txt  show_bytes.c
snippet/src/Ch3/double_support/: CMakeLists.txt  double_config.h  double_config.h.in  double_support.c  double_support.cl
snippet/src/Ch3/vectorization/: CMakeLists.txt  vectorization.c  vectorization.cl
snippet/src/Ch4/par_min/: CMakeLists.txt  par_min.cl  parallel_min.c
snippet/src/Ch4/simple_dot_product/: CMakeLists.txt  matvecmult.c  matvecmult.cl
snippet/src/Ch4/simple_fma_vs_mad/: CMakeLists.txt  fma_mad_cmp.c  fma_mad_cmp.cl
snippet/src/Ch4/simple_rounding/: CMakeLists.txt  simple_rounding.c  simple_rounding.cl
snippet/src/Ch4/simple_select_filter/: CMakeLists.txt  select_filter.c  select_filter.cl
snippet/src/Ch4/simple_shuffle/: CMakeLists.txt  simple_shuffle.c  simple_shuffle.cl
snippet/src/Ch4/simple_trigonometry/: CMakeLists.txt  simple_trigo.c  simple_trigo.cl
snippet/src/Ch4/simple_vector_load/: CMakeLists.txt  vector_load.c  vector_load.cl
snippet/src/Ch4/simple_vector_store/: CMakeLists.txt  vector_store.c  vector_store.cl
snippet/src/Ch5/histogram/: CMakeLists.txt  Histogram  commit.sh  histogram.cl  main.c  run.sh
snippet/src/Ch5/histogram_boost/: README
snippet/src/Ch5/histogram_c/: CMakeLists.txt  histogram.c
snippet/src/Ch6/sobelfilter/: CMakeLists.txt  Partition  SobelFilter  SobelFilter.c  bmp.h  run.sh  runlocal.sh  sobel_detector.cl
snippet/src/Ch6/sobelfilter/Partition.dSYM/Contents/Resources/DWARF/: Partition
snippet/src/Ch6/sobelfilter/SobelFilter.dSYM/Contents/: Info.plist
snippet/src/Ch6/sobelfilter/SobelFilter.dSYM/Contents/Resources/DWARF/: SobelFilter
snippet/src/Ch7/matrix_multiplication_01/: CMakeLists.txt  MatrixMultiplication.c  Partition  README.md  simple_mm_mult.cl
snippet/src/Ch7/matrix_multiplication_01/Partition.dSYM/Contents/Resources/DWARF/: Partition
snippet/src/Ch7/matrix_multiplication_02/: CMakeLists.txt  MatrixMultiplication.c  Partition  mmult.cl
snippet/src/Ch7/matrix_multiplication_02/Partition.dSYM/Contents/Resources/DWARF/: Partition
snippet/src/Ch7/matrix_multiplication_03/: CMakeLists.txt  MatrixMultiplication.c  Partition  mmult.cl
snippet/src/Ch7/matrix_multiplication_03/Partition.dSYM/Contents/Resources/DWARF/: Partition
snippet/src/Ch7/matrix_multiplication_04/: CMakeLists.txt  MatrixMultiplication.c  Partition  mmult.cl  runlocal.sh
snippet/src/Ch7/matrix_multiplication_04/Partition.dSYM/Contents/: Info.plist
snippet/src/Ch7/matrix_multiplication_04/Partition.dSYM/Contents/Resources/DWARF/: Partition
snippet/src/Ch8/SpMV/: CMakeLists.txt  Spmv.c  spmv.cl  spmv_config.h.in
snippet/src/Ch8/SpMV_VexCL/: CMakeLists.txt  README.cmd  SpMV.cpp
snippet/src/Ch9/BitonicSort_CPU_01/: BitonicSort.c  CMakeLists.txt
snippet/src/Ch9/BitonicSort_GPU/: BitonicSort.c  BitonicSort.cl  CMakeLists.txt  bitonicsort_config.h  bitonicsort_config.h.in
snippet/vexcl/src/: .gitignore  CMakeCache.txt
snippet/vexcl/src/Ch1/context_query/: CMakeLists.txt  context_details  context_details.c
snippet/vexcl/src/Ch1/device_details/: device_details
snippet/vexcl/src/Ch1/device_extensions/: device_extensions.c
snippet/vexcl/src/Ch1/kernel_query/: kernel_query
snippet/vexcl/src/Ch6/sobelfilter/: SobelFilter.c  sobel_detector.cl
