cmake_minimum_required(VERSION 3.3)
project(4520OT_Code)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    cmake/FindOpenCL.cmake
    cmake/FindSSE.cmake
    src/Ch1/build_opencl_program/build_opencl_program.c
    src/Ch1/context_query/context_details.c
    src/Ch1/device_details/device_details.c
    src/Ch1/device_extensions/device_extensions.c
    src/Ch1/kernel_query/kernel_query.c
    src/Ch1/kernel_queue/kernel_queue.c
    src/Ch1/platform_details/platform_details.c
    src/Ch10/RadixSort_GPU/RadixSort.c
    src/Ch10/RadixSort_GPU/radixsort_config.h
    src/Ch10/Reduction/reduction.c
    src/Ch10/Reduction/reduction_serial.cpp
    src/Ch2/buffer_query/buffer_query.c
    src/Ch2/buffer_query/buffer_query.h
    src/Ch2/copy_buffer/copy_buffer.c
    src/Ch2/copy_buffer/user_buffer.h
    src/Ch2/events/events.c
    src/Ch2/simple_2D_readwrite/simple_2D_readwrite.c
    src/Ch2/sub_buffer_query/subbuffer_query.c
    src/Ch2/sub_buffer_query/subbuffer_query.h
    src/Ch2/sub_buffers/sub_buffer.c
    src/Ch2/sub_buffers/user_buffer.h
    src/Ch2/user_buffer/user_buffer.c
    src/Ch2/user_buffer/user_buffer.h
    src/Ch2/user_buffer_alignment/user_buffer.h
    src/Ch2/user_buffer_alignment/user_buffer_align.c
    src/Ch2/work_partitioning/work_partition.c
    src/Ch3/byte_ordering/show_bytes.c
    src/Ch3/double_support/double_config.h
    src/Ch3/double_support/double_support.c
    src/Ch3/OpenCLVectorizationOSX/multiplication/main.c
    src/Ch3/vectorization/vectorization.c
    src/Ch3/vectorization/vectorization_config.h
    src/Ch4/par_min/par_min_config.h
    src/Ch4/par_min/parallel_min.c
    src/Ch4/simple_dot_product/matvecmult.c
    src/Ch4/simple_dot_product/matvecmult_config.h
    src/Ch4/simple_fma_vs_mad/fma_mad_cmp.c
    src/Ch4/simple_fma_vs_mad/fma_mad_cmp_config.h
    src/Ch4/simple_rounding/simple_rounding.c
    src/Ch4/simple_rounding/simple_rounding_config.h
    src/Ch4/simple_select_filter/select_filter.c
    src/Ch4/simple_select_filter/select_filter_config.h
    src/Ch4/simple_shuffle/simple_shuffle.c
    src/Ch4/simple_shuffle/simple_shuffle_config.h
    src/Ch4/simple_trigonometry/simple_trigo.c
    src/Ch4/simple_trigonometry/simple_trigo_config.h
    src/Ch4/simple_vector_load/vector_load.c
    src/Ch4/simple_vector_load/vector_load_config.h
    src/Ch4/simple_vector_store/vector_store.c
    src/Ch4/simple_vector_store/vector_store_config.h
    src/Ch5/histogram/histogram_config.h
    src/Ch5/histogram/main.c
    src/Ch5/histogram_boost/histogram.cpp
    src/Ch5/histogram_c/histogram.c
    src/Ch6/sobelfilter/bmp.h
    src/Ch6/sobelfilter/SobelFilter.c
    src/Ch6/sobelfilter/sobelfilter_config.h
    src/Ch7/matrix_multiplication_01/MatrixMultiplication.c
    src/Ch7/matrix_multiplication_01/matrixmultiplication_config.h
    src/Ch7/matrix_multiplication_02/MatrixMultiplication.c
    src/Ch7/matrix_multiplication_02/matrixmultiplication_config.h
    src/Ch7/matrix_multiplication_03/MatrixMultiplication.c
    src/Ch7/matrix_multiplication_03/matrixmultiplication_config.h
    src/Ch7/matrix_multiplication_04/MatrixMultiplication.c
    src/Ch7/matrix_multiplication_04/matrixmultiplication_config.h
    src/Ch8/SpMV/Spmv.c
    src/Ch8/SpMV/spmv.h
    src/Ch8/SpMV/util.h
    src/Ch8/SpMV_VexCL/SpMV.cpp
    src/Ch9/BitonicSort_CPU_01/BitonicSort.c
    src/Ch9/BitonicSort_GPU/BitonicSort.c
    src/Ch9/BitonicSort_GPU/bitonicsort_config.h
    src/CMakeFiles/CompilerIdC/CMakeCCompilerId.c
    src/CMakeFiles/CompilerIdCXX/CMakeCXXCompilerId.cpp
    src/cmake_install.cmake
    src/CMakeCache.txt
    src/CMakeLists.txt
    src/Makefile
    vexcl/external/boost_compute.hpp
    vexcl/external/viennacl.hpp
    vexcl/fft/kernels.hpp
    vexcl/fft/plan.hpp
    vexcl/fft/unrolled_dft.hpp
    vexcl/mpi/multivector.hpp
    vexcl/mpi/operations.hpp
    vexcl/mpi/reduce.hpp
    vexcl/mpi/spmat.hpp
    vexcl/mpi/util.hpp
    vexcl/mpi/vector.hpp
    vexcl/random/philox.hpp
    vexcl/random/threefry.hpp
    vexcl/src/Ch1/context_query/context_details.c
    vexcl/src/Ch1/device_details/device_details.c
    vexcl/src/Ch1/device_extensions/device_extensions.c
    vexcl/src/Ch1/kernel_query/kernel_query.c
    vexcl/src/Ch6/sobelfilter/bmp.h
    vexcl/src/Ch6/sobelfilter/SobelFilter.c
    vexcl/src/Ch6/sobelfilter/sobelfilter_config.h
    vexcl/devlist.hpp
    vexcl/fft.hpp
    vexcl/gather.hpp
    vexcl/generator.hpp
    vexcl/mpi.hpp
    vexcl/multivector.hpp
    vexcl/operations.hpp
    vexcl/profiler.hpp
    vexcl/random.hpp
    vexcl/reduce.hpp
    vexcl/spmat.hpp
    vexcl/stencil.hpp
    vexcl/types.hpp
    vexcl/util.hpp
    vexcl/vector.hpp
    vexcl/vexcl.hpp)

add_executable(4520OT_Code ${SOURCE_FILES})