# Build each individual OpenCL program
add_subdirectory(Ch1/build_opencl_program)
add_subdirectory(Ch1/context_query)
add_subdirectory(Ch1/device_details)
add_subdirectory(Ch1/device_extensions)
add_subdirectory(Ch1/kernel_query)
add_subdirectory(Ch1/kernel_queue)
add_subdirectory(Ch1/platform_details)

add_subdirectory(Ch2/buffer_query)
add_subdirectory(Ch2/copy_buffer)
add_subdirectory(Ch2/simple_2D_readwrite)
add_subdirectory(Ch2/sub_buffer_query)
add_subdirectory(Ch2/sub_buffers)
add_subdirectory(Ch2/user_buffer)
add_subdirectory(Ch2/user_buffer_alignment)
add_subdirectory(Ch2/work_partitioning)
add_subdirectory(Ch2/events)

add_subdirectory(Ch3/byte_ordering)
add_subdirectory(Ch3/vectorization)
add_subdirectory(Ch3/double_support)

add_subdirectory(Ch4/simple_vector_load)
add_subdirectory(Ch4/simple_vector_store)
add_subdirectory(Ch4/simple_dot_product)
add_subdirectory(Ch4/par_min)
add_subdirectory(Ch4/simple_fma_vs_mad)
add_subdirectory(Ch4/simple_rounding)
add_subdirectory(Ch4/simple_select_filter)
add_subdirectory(Ch4/simple_shuffle)
add_subdirectory(Ch4/simple_trigonometry)

add_subdirectory(Ch5/histogram)
add_subdirectory(Ch5/histogram_c)

add_subdirectory(Ch6/sobelfilter)
add_subdirectory(Ch7/matrix_multiplication)
add_subdirectory(Ch7/matrix_multiplication_01)
add_subdirectory(Ch7/matrix_multiplication_02)
add_subdirectory(Ch7/matrix_multiplication_03)
add_subdirectory(Ch7/matrix_multiplication_04)
add_subdirectory(Ch8/SpMV_VexCL)
add_subdirectory(Ch8/SpMV)

add_subdirectory(Ch9/BitonicSort_CPU_01)
add_subdirectory(Ch9/BitonicSort_CPU_02)
add_subdirectory(Ch9/BitonicSort_GPU_01)
add_subdirectory(Ch9/BitonicSort_GPU_02)

add_subdirectory(Ch10/QuickSort_Binary)
add_subdirectory(Ch10/MSDRadixSort_CPU)
add_subdirectory(Ch10/RadixSort_CPU)
add_subdirectory(Ch10/RadixSort_GPU)
add_subdirectory(Ch10/Reduction)
